# Triangulacion-de-Delaunay

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.py  main2.py  readme.md  requirements.txt  test.py
include/: TCommon.h  TFace.h  THalfEdge.h  TMesh.h  TVertex.h  common.h  face.h  half_edge.h  mesh.h  predicates2.h  utils.h  vertex.h
mesh_build_cmake/ninja-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
mesh_build_cmake/ninja-release/src/: cmake_install.cmake
src/: CMakeLists.txt  Facet.h  HalfEdge.h  HalfEdge.py  HalfEdgeMesh.py  Mesh.h  TFace.cpp  THalfEdge.cpp  TMesh.cpp  TVertex.cpp  Vertex.h  alg.py  delaunayMesh.cpp  facet.py  predicates.c  predicates2.cpp  utils.cpp
src2/: HalfEdge.py  HalfEdgeMesh.py  alg.py  facet.py  vertex.py
